--- a/client/src/logreg.css
+++ b/client/src/logreg.css
@@ -1,7 +1,70 @@
 .logRegForms {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 68vh;
+}
+
+.navButton5 {
+
+  align-items: center;
+  appearance: none;
+  background-color: #0097B2;
+  border-radius: 12px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: white;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "montserrat",monospace;
+  height: 30px;
+  width: auto;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  margin-bottom: 5px;
+  overflow: hidden;
+  padding-left: 12px;
+  padding-right: 12px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+  }
+  
+.navButton:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+  
+.navButton:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+  
+.navButton:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+button:hover {
+  transform: translateY(-0.25vh);
+  color:rgb(0, 0, 0);
+}
+
+.titleLog {
+  font-size: x-large;
+  font-weight: 400;
+  color: #0097B2;
+  text-shadow: 1px 1px 1px #f8906d;
+  padding: 0px 0px 5px 0px;
+
 }
 
 @media (max-width: 767px){
