--- a/client/src/navbar.css
+++ b/client/src/navbar.css
@@ -36,8 +36,8 @@
     cursor: pointer;
     display: inline-flex;
     font-family: "montserrat",monospace;
-    height: 35px;
-    width: 75px;
+    height: 30px;
+    width: 80px;
     justify-content: center;
     line-height: 1;
     list-style: none;
@@ -93,11 +93,87 @@ button:hover {
       }
       
       .plainLogo{
-        align-self: left;
-        width: 250;
-        height: 44.7;
-        margin-left: 0;
+        width: 70%; /* Adjust the percentage based on your preference */
+        height: auto; /* Maintain aspect ratio */
+        margin: 0 auto; /* Center-align horizontally */
+        align-items: center;
       }
 
   
+    }
+
+    .mobile-menu-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.9);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 2;
+    }
+    
+    .mobile-menu {
+      background-color: whitesmoke;
+      border-radius: 5px;
+      padding: 20px;
+    }
+    
+    .mobile-menu-list {
+      list-style: none;
+      padding: 0;
+    }
+    
+    .mobile-menu-item {
+      margin-bottom: 10px;
+    }
+    
+    .mobile-menu-item a {
+      text-decoration: none;
+      color: #000;
+      font-size: 18px;
+      display: block;
+    }
+    
+    .mobile-menu-item a:hover {
+      color: #0097B2;
+    }
+
+    .mobile-menu-button {
+      display: none; /* Hide the button by default */
+      cursor: pointer;
+    }
+    
+    .mobile-menu-button .hamburger {
+      display: flex;
+      flex-direction: column;
+      cursor: pointer;
+    }
+    
+    .mobile-menu-button .bar {
+      width: 30px;
+      height: 3px;
+      background-color: #0097B2;
+      margin: 4px 0px 4px 8px;
+      transition: 0.4s;
+    }
+    
+    .mobile-menu-button .bar.open:nth-child(1) {
+      transform: rotate(-45deg) translate(5px, 5px);
+    }
+    
+    .mobile-menu-button .bar.open:nth-child(2) {
+      opacity: 0;
+    }
+    
+    .mobile-menu-button .bar.open:nth-child(3) {
+      transform: rotate(45deg) translate(5px, -5px);
+    }
+    
+    @media (max-width: 767px) {
+      .mobile-menu-button {
+        display: block; /* Display the button on small screens */
+      }
     }
