--- a/client/src/userDash.css
+++ b/client/src/userDash.css
@@ -1,35 +1,34 @@
-/* Add responsive styles for the entire User Dashboard */
-.homeHome {
+
+.homeHome1 {
+  background-color: white;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 20vh;
+  font-family: montserrat;
+
 }
 
-.dashTabs {
+.titleUserDash {
+  font-size: xx-large;
+  font-weight: 800;
+  color: #0097B2;
+  text-shadow: 2px 2px 2px #f8906d;
+  padding: 5px 0px 5px 0px;
+
+}
+
+/* .dashTabs {
     width: 50px;
-}
+} */
 
-  /* Style for Confetti animation */
-  /* You can customize this further if needed */
+
   .react-confetti {
     position: absolute;
     top: 0;
     left: 0;
     z-index: 100;
   }
-
-  /* Style for the dashboard tabs/icons */
-.dashItems {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-/* Add hover effect for dashboard icons */
-.dashItems img:hover {
-  transform: scale(1.1);
-}
 
 /* Style for the "Welcome" title */
 /* .title1 {
@@ -39,27 +38,69 @@
 } */
   
 .orgStuff {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  margin: 2px;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  padding: 2px;
+  align-items: flex-start;
+  justify-content: space-around;
 }
 
-/* .orgWithin {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+/* .background-image {
+  background-image: url(./assets/macrome.svg);
+  background-size: cover;
+  background-position: center;
+  opacity: 0.7;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 } */
 
 .orgWithin {
+  margin: 2px;
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  margin: 10px;
+  padding: 2px;
+
 }
 
-/* Add responsive styles for the organized sections */
+
+
+.dashSidebar {
+  margin: 2px;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  padding: 2px;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.dashItems {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+/* .dashItems img {
+  width: 100px;
+} */
+
+
+.dashItems img:hover {
+  transform: scale(1.1);
+}
+
+
 @media (max-width: 768px) {
-  .orgStuff {
+  .orgStuff, .dashSidebar {
     flex-direction: column;
+    align-items: center;
   }
 }
